--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <h1>Web developer page sample</h1>
     <hr>
-    <a href="../../2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a>
+    <a href="index.html">Movie Ranking Project</a>
     <br />
     <br />
-    <img src="../4.3 HTML Porfolio Project/assets/images/movies.png" height="200"/>
+    <img src="./assets/images/movies.png" height="200"/>
     <br />
     <br /> 
-    <a href="../../3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html">Birthday Invite Project</a>
+    <a href="./index.html">Birthday Invite Project</a>
     <br />
     <br />
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday.png" height="200"/>
+    <img src="./assets/images/birthday.png" height="200"/>
     <br />
     <br />
     <hr>
