--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Web developer page sample</h1>
     <hr>
-    <a href="../movie-ranking.html">Movie Ranking Project</a>
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
     <br />
     <br />
     <img src="./assets/images/movies.png" height="200"/>
     <br />
     <br /> 
-    <a href="../birthday-invite.html">Birthday Invite Project</a>
+    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
     <br />
     <br />
     <img src="./assets/images/birthday.png" height="200"/>
